--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -1,8 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106121445-5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-106121445-5');
+  </script>
   <meta charset="utf-8">
-  <title>Web</title>
+  <title>Auctus Experts</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
