--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -17,6 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://widget-convert.bancor.network/v1"></script>
 </head>
 <body>
   <app-root></app-root>
