--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -13,8 +13,8 @@
   <!-- Begin Inspectlet Asynchronous Code -->
   <script type="text/javascript">
     (function() {
-    window._insp = window._insp || [];
-    _insp.push(['wid', 1527752769]);
+    window.__insp = window.__insp || [];
+    __insp.push(['wid', 1527752769]);
     var ldinsp = function(){
     if(typeof window._inspld != "undefined") return; window._inspld = 1; var insp = document.createElement('script'); insp.type = 'text/javascript'; insp.async = true; insp.id = "inspsync"; insp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://cdn.inspectlet.com/inspectlet.js?wid=1527752769&r=' + Math.floor(new Date().getTime()/3600000); var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(insp, x); };
     setTimeout(ldinsp, 0);
