facebook metatags on head

--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -26,6 +26,13 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:site_name" content="Auctus Experts">
+  <meta property="og:title" content="Auctus Experts">
+  <meta property="og:description" content="Recommendations from experts and cryptocurrencies that you are following">
+  <meta property="og:image" content="https://dl.auctus.org/img/Img_Verify.png">
+  <meta property="og:type" content="website">
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://widget-convert.bancor.network/v1"></script>
