--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -36,6 +36,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://widget-convert.bancor.network/v1"></script>
+  <script type="text/javascript" src="https://static.cryptowat.ch/assets/scripts/embed.bundle.js"></script>
 </head>
 <body>
   <app-root></app-root>
