--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -37,6 +37,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://widget-convert.bancor.network/v1"></script>
   <script type="text/javascript" src="https://static.cryptowat.ch/assets/scripts/embed.bundle.js"></script>
+  <script src="https://code.highcharts.com/stock/highstock.js"></script>
 </head>
 <body>
   <app-root></app-root>
