Renaming a lot of stuff

--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -29,7 +29,7 @@
 
   <meta property="og:site_name" content="Auctus Experts">
   <meta property="og:title" content="Auctus Experts">
-  <meta property="og:description" content="Recommendations from experts and cryptocurrencies that you are following">
+  <meta property="og:description" content="Signals from experts and cryptocurrencies that you are following">
   <meta property="og:image" content="https://dl.auctus.org/img/Img_Verify.png">
   <meta property="og:type" content="website">
 
